# self-evolving-opencode

./: .env.example  .gitignore  .test_plans.md  AGENTS.md  CLAUDE.md  README.md  compose.yaml  devlogs.md  main.py  play.py  pyproject.toml  sessions.txt
.dingllm/: .brainstorm.md
docs/: RESEARCH_embedding_clustering.md
scripts/: init_skills_db.py
specs/: 000_overview.md  001_opencode_db.md  002_llm.md  003_goal_extraction.md  004_goal_checking.md  005_conversation_summarization.md  006_goal_clustering.md  007_cli.md  008_skill_synthesizer.md  009_skill_registry.md  010_skill_rules.md  011_reflector.md  012_curator.md  013_skill_evolution_cli.md
src/: conversation_summarizer.py  curator.py  goal_checker.py  goal_clusterer.py  goal_extractor.py  opencode_db.py  reflector.py  skill_evolution.py  skill_registry.py  skill_rules.py  skill_synthesizer.py
src/llm/: __init__.py  cache.py
tests/: conftest.py  helpers.py  test_conversation_summarizer.py  test_curator.py  test_goal_checker.py  test_goal_clusterer.py  test_goal_extractor.py  test_llm.py  test_opencode_db.py  test_reflector.py  test_skill_evolution.py  test_skill_registry.py  test_skill_rules.py  test_skill_synthesizer.py
tests/fixtures/: goal_checker_responses.json
