[project]
name = "self-evolving-opencode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[vertex]>=0.103.1",
    "hdbscan>=0.8.40",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "redis>=5.0",
    "loguru>=0.7",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "redis: requires Redis on localhost:6380",
    "live: calls real LLM API (slow, expensive)",
]
addopts = "-m 'not live'"
